# YouTube-video-to-PDF-Summarizer

./: 5 Pi Projects.md  CONTRIBUTING.md  E Ink Weather Dashboard DIY.md  LICENSE  README.md  pyproject.toml  youtube_to_pdf.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: c_tests.yml  test.yml
docs/: index.md  installation.md  usage.md
src/youtube_video_to_pdf_summarizer/: __init__.py  cli.py
tests/: __init__.py  test_youtube_video_to_pdf_summarizer.py
