[project]
name = "python-boilerplate"
version = "0.1.0"
description = "Script downloads a YouTube video's audio, transcribes it, analyzes the content, and generates a structured PDF based on the video type (DIY turorial, list, or general info)."
readme = "README.md"
authors = [
  {name = "Carlos Mendez", email = "lb562cali@icloud.com"}
]
maintainers = [
  {name = "Carlos Mendez", email = "lb562cali@icloud.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/LosMen562/youtube_video_to_pdf_summarizer/issues"
changelog = "https://github.com/LosMen562/youtube_video_to_pdf_summarizer/blob/master/changelog.md"
homepage = "https://github.com/LosMen562/youtube_video_to_pdf_summarizer"

[project.scripts]
youtube_video_to_pdf_summarizer = "youtube_video_to_pdf_summarizer.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
